--- a/airhealth-app/src/App.css
+++ b/airhealth-app/src/App.css
@@ -1,5 +1,33 @@
 .App {
+  padding-top: 100px;
+  padding-bottom: 100px;
   text-align: center;
+  background-color: #f6f5f5;
+
+}
+
+h1 {
+  color: #276678;
+ 
+}
+h3 {
+  color: #276678;
+}
+
+
+button {
+  background-color: #1687a7;
+  border-color: #1687a7;
+  border-radius: 32px;
+  margin: 16px 8px 8px 8px;
+  font-size: 18px;
+  padding: 20px 28px 20px 28px;
+  border-width: 0;
+  font-weight: 600;
+  color: white;
+  letter-spacing: 2px;
+  cursor: pointer;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 }
 
 
