--- a/airhealth-app/src/App.css
+++ b/airhealth-app/src/App.css
@@ -13,6 +13,17 @@ h1 {
 h3 {
   color: #276678;
 }
+h4 {
+  color: #276678;
+}
+
+p { color: #276678;
+}
+
+label {
+  color: #276678;
+  font-size: 20px;
+}
 
 
 button {
@@ -30,4 +41,10 @@ button {
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 }
 
-
+input {
+  margin: 15px;
+  border-color: #2F4F4F;
+  border-radius: 8px;
+  border-width: 1px;
+  padding: 8px;
+}
